[package]
name = "e-ring"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
license = "MIT"
description = "A no_std append only ring buffer, when full new element replace oldest one"
repository = "https://github.com/RCasatta/e-ring"
documentation = "https://docs.rs/e-ring"
keywords = ["ring", "buffer", "embedded", "no_std", "const-generics"]
categories = [
    "embedded",
    "no-std",
    "data-structures",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
