[package]
name = "e-ring"
version = "0.2.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
license = "MIT"
description = "A no_std append only ring buffer, when full new element replace oldest one"
repository = "https://github.com/RCasatta/e-ring"
documentation = "https://docs.rs/e-ring"
keywords = ["ring", "buffer", "embedded", "no_std", "const-generics"]
categories = [
    "embedded",
    "no-std",
    "data-structures",
]

[dependencies]
embedded-graphics = { version = "0.7", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"

[features]
hist = ["embedded-graphics"]